# ML-experiments

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Pipfile  README.md  _requirements.txt  andtable.py  build.bat  call_test.py  call_test_gui.py  docker_build.bat  docker_run.bat  docker_run_gui.bat  docker_run_gui.sh  download_data.bat  download_data.sh  environment.yml  iris.py  local_build.bat  local_build.sh  local_run.bat  main.py  manage.py  pyproject.toml  requeriments.txt  requirements.txt  run.bat  run_web_gui.py  test_mnist.py  titanic.py  xortable.py
gui_tkinter/: psychoacoustic_plots.py
gui_web/project_root/: asgi.py  (+3 more)
load_data/: ILoadSupervised.py  ILoadUnsupervised.py  ILoadUtils.py  andtable.py  cifar10_keras.py  iris.py  mnist_file.py  mnist_keras.py  titanic.py  xortable.py
neuralnetworks/: perceptron_random.py
optimization/: iterative_methods.py
preprocessing/: change_types.py  verify_types.py
supervised/: KNN.py  KNNRegression.py  decision_forest_incomplete.py  linear_regression.py  perceptron.py
test/: Autoencoder_Iris_Mnist.py  CLUSTERING_Benchmarks.py  CLUSTERING_Montecarlo.py  Confusion_Matrices.py  IMAGE_GAN_Mnist.py  IMAGE_convolutional_clasiffier_mnist.py  IMAGE_segmentation_clasification_butterfly.py  TEXT_Sentiment_Analysis1.py  TEXT_TFIDF_tests.py  TEXT_TopicModeling_Bigtexts.py  analytics_vidhya_twitter_sentiment.py  basic_clustering.py  basic_mh_optimization.py  basic_mh_optimization_npcomp.py  basic_optimization_problems.py  butterfly.py  categorical_mh_optimization.py  create_reddit_chatbot_dataset.py  gan_mnist.py  load_all_files.py  mnist_convolve_tf.py  nonlinear_mh_optimization.py  psychoacoustic_plots.py  reconstruct_data.py  some_basic_matrices.py  test_sentiment_analysis.py  text_make_wordclouds.py  text_tf_idf_tests.py  text_vectorize_big_texts.py  tf_hello_world.py  tf_idf_tests.py  topic_modeling_big_texts.py  unsupervised_clustering.py
tests/: perceptron.py
unsupervised/: autoencoder_tf.py  correlation_matrix.py  distance.py
utils/: 2D_filters.py  __init__.py  binarization_strategy.py  change_types.py  generate_random.py  pngutils.py  points_utils.py  preprocess_2D.py  verify_types.py
web_gui/: __init__.py  app.py
with_tf/: autoencoder.py  hello_world.py
(+404 files in other folders)
