[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mlexperiments"
version = "0.0.1"
authors = [
    { name="Erick Merino", email="erickfmm@gmail.com" },
]
maintainers = [
  { name="Erick Merino", email="erickfmm@gmail.com" },
]
description = "A bunch of ML Experiments"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.11"
keywords = [
  "machinelearning", "load-data"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "numpy",
]

[project.optional-dependencies]
test = [
  "matplotlib",
]

[project.urls]
"Homepage" = "https://github.com/erickfmm/ML-experiments"
"Bug Tracker" = "https://github.com/erickfmm/ML-experiments/issues"

[tool.hatch.build]
sources = ["src"]